@@ -3,6 +3,7 @@
 - API Change: Removed Mesh.create(...), use MeshBuilder instead
 - API Change: BitmapFontData, BitmapFont, and BitmapFontCache have been refactored. http://www.badlogicgames.com/wordpress/?p=3658
 - FreeTypeFontGenerator can now render glyphs on the fly.
+- API Change: Removed Window#getButtonTable, use Window#getTitleTable and Dialog#getButtonTable instead
 
 [1.5.5]
 - Added iOS ARM-64 bit support for Bullet physics
